# n8n-forge

./: README.md  pyproject.toml
n8n_forge/: __init__.py  generator.py  node_catalog.py  parser.py  prompt_builder.py  schema.py
n8n_forge/templates/: system_prompt.j2
tests/: __init__.py  test_generator.py  test_node_catalog.py  test_parser.py  test_prompt_builder.py  test_schema.py
