[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-forge"
version = "0.1.0"
description = "Convert plain-English automation descriptions into ready-to-import n8n workflow JSON files using OpenAI GPT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "n8n Forge Contributors" }
]
keywords = ["n8n", "automation", "workflow", "openai", "llm", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1",
  "openai>=1.0",
  "jinja2>=3.1",
  "pydantic>=2.0",
  "rich>=13.0",
]

[project.scripts]
n8n-forge = "n8n_forge.cli:main"

[project.urls]
Homepage = "https://github.com/example/n8n-forge"
Repository = "https://github.com/example/n8n-forge"
Issues = "https://github.com/example/n8n-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["n8n_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
